samples/_failures_safe/1761153084_d7d48b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_46f83c5d.c: In function ‘main’:
./samples/SAFE/__tmp_46f83c5d.c:147:40: error: expected ‘)’ at end of input
  147 |         if (len > 0 && pattern[len - 1]
      |            ~                           ^
      |                                        )
./samples/SAFE/__tmp_46f83c5d.c:147:9: error: expected declaration or statement at end of input
  147 |         if (len > 0 && pattern[len - 1]
      |         ^~
./samples/SAFE/__tmp_46f83c5d.c:147:9: error: expected declaration or statement at end of input
